--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    scroll-behavior: smooth
 }
 
 body {
     overflow-x: hidden;
     background-color: rgb(0, 0, 0);
     color: white;
+    
 }
 
 /* width */
@@ -139,7 +141,7 @@ nav .right a:nth-child(1) {
     border-radius: 20px;
     left: 10%;
     z-index: 1;
-    
+
 }
 
 #main .image2 {
@@ -168,7 +170,7 @@ h5 {
     color: white;
     position: absolute;
     bottom: 5%;
-    left: 40%;
+    left: 50%;
     font-family: sans-serif;
     font-size: 15px;
 }
@@ -180,6 +182,7 @@ h5 {
     display: flex;
     gap: 60px;
 }
+
 /* .0 */
 .about_img {
     width: 500px;
@@ -196,7 +199,13 @@ h5 {
 
 .ab_right p {
     font-size: 20px;
+    text-align: justify;
     line-height: 2;
+}
+
+.ab_left button {
+    margin-top: 20px;
+    width: 100%;
 }
 
 /* skills section */
@@ -407,16 +416,18 @@ button.primary:hover {
         max-width: 300px;
     }
 }
+
 /* -----contact form ----  */
-.contact{
+.contact {
     margin-bottom: 50px;
-    height: 70vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-input{
+
+input {
     font-size: 30px;
     color: white;
     background-color: transparent;
@@ -425,59 +436,69 @@ input{
     border-bottom: 2px solid white;
 }
 
-input:focus{
+input:focus {
     outline: none;
 }
 
-form .input_container{
+form .input_container {
     width: 100%;
     display: grid;
     gap: 30px;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 40px;
 }
-form .input_subject{
+
+form .input_subject {
     margin-bottom: 40px;
 }
-.form{
-    max-width:70%;
+
+.form {
+    max-width: 70%;
     margin: 0 auto;
 }
-.get_in_touch{
+
+.get_in_touch {
     display: flex;
     position: relative;
     justify-content: center;
     margin-top: 40px;
     margin-bottom: 40px;
 }
-.get_in_touch h2{
+
+.get_in_touch h2 {
     font-size: 40px;
     font-weight: 900;
     /* position: absolute; */
 }
-.social_icons{
+
+.social_icons {
     display: flex;
     justify-content: center;
-    margin-bottom:30px; 
+    margin-bottom: 30px;
     gap: 30px;
 }
-.social_icons a{
+
+.social_icons a {
     display: flex;
     justify-content: center;
-    margin-bottom:30px; 
+    margin-bottom: 30px;
     gap: 30px;
     transition: 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
 }
-.social_icons a:hover{
+
+.social_icons a:hover {
     transform: scale(1.2);
 }
-.submit_btn{
-   display: flex;
-   justify-content: right;
+
+.submit_btn {
+    display: flex;
+    justify-content: right;
 }
-.submit_btn .primary{
+
+.submit_btn .primary {
     font-size: 20px;
 }
+
 /* .get_in_touch h2_motion{
     position: absolute;
 } */
@@ -500,6 +521,7 @@ form .input_subject{
         height: auto;
         opacity: 0.5;
     }
+
     #main .image2 {
         width: 80px;
         height: auto;
@@ -507,26 +529,32 @@ form .input_subject{
         bottom: 10%;
         opacity: 0.5;
     }
+
     #main .image3 {
         width: 100px;
         height: auto;
         opacity: 0.5;
     }
+
     #main .image4 {
         width: 100px;
         height: auto;
         opacity: 0.5;
     }
-    .about_img{
+
+    .about_img {
         width: 350px;
 
     }
-    .ab_right h2{
+
+    .ab_right h2 {
         font-size: 30px;
     }
-    .ab_right p{
+
+    .ab_right p {
         font-size: 16px;
     }
+
     .skills_img_container {
         width: 200px;
     }
@@ -537,29 +565,35 @@ form .input_subject{
     #main h1 {
         font-size: 60px;
     }
+
     #main h1 span {
         font-size: 20px;
         padding: 10px 20px;
         border-radius: 35px;
         margin: 0 20px 0 20px;
     }
-       
+
     #main .heroimg {
-        display: none; 
+        display: none;
     }
+
     #about {
         gap: 20px;
     }
-    .about_img{
+
+    .about_img {
         width: 250px;
 
     }
-    .ab_right h2{
+
+    .ab_right h2 {
         font-size: 30px;
     }
-    .ab_right p{
+
+    .ab_right p {
         font-size: 15px;
     }
+
     .skills_img_container {
         width: 200px;
     }
@@ -567,48 +601,58 @@ form .input_subject{
 
 /* media screen for 800px */
 @media screen and (max-width:800px) {
-    .mid{
+    .mid {
         display: none;
     }
+
     #about {
         gap: 20px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    .about_img{
+
+    .about_img {
         width: 250px;
     }
-    .ab_left{
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
+
+    .ab_left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-    .ab_left button{
+
+    .ab_left button {
         margin-top: 20px;
         width: 100%;
     }
-    .ab_right h2{
+
+    .ab_right h2 {
         font-size: 30px;
     }
-    .ab_right p{
+
+    .ab_right p {
         font-size: 15px;
         text-align: justify;
     }
+
     .skills_img_container {
         width: 150px;
     }
-    .p1{
+
+    .p1 {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 20px;
-     }
-     .primary{
-         width: 150px;
-         
-     }
+    }
+
+    .primary {
+        width: 150px;
+
+    }
 }
+
 /* media screen for 500px */
 @media screen and (max-width:500px) {
     .set_width {
@@ -617,43 +661,61 @@ form .input_subject{
         padding-right: 30px;
         margin: 0 auto;
     }
-    #main h1{
+
+    #main nav img {
+        width: 150px;
+        height: auto;
+    }
+
+    #main h1 {
         font-size: 45px;
     }
+
     #main h1 span {
-        font-size:18px;
+        font-size: 18px;
         padding: 10px 20px;
         border-radius: 35px;
         margin: 0 20px 0 20px;
     }
-    .about_img{
+
+    h5 {
+        bottom: 5%;
+        left: 38%;
+    }
+
+    .about_img {
         width: 300px;
     }
-    .ab_right h2{
+
+    .ab_right h2 {
         font-size: 30px;
     }
-    .ab_right p{
+
+    .ab_right p {
         font-size: 15px;
         text-align: justify;
     }
+
     .skills_container {
         display: flex;
         flex-wrap: wrap;
         gap: 20px;
         justify-content: space-around;
     }
+
     .skills_img_container {
         width: 100px;
     }
-    form .input_container{
+
+    form .input_container {
         grid-template-columns: 1fr;
     }
-   
+
 }
 
 
 /* -----footer----  */
-.footer_p{
+.footer_p {
     text-align: center;
     color: black;
     background-color: white;
